# gooddata-python-sdk

./: .copyrightignore  .dockerignore  .editorconfig  .env  .envrc  .flake8  .fossa.yml  .gitignore  .gitlint  .gitmodules  .mcp.json  .pre-commit-config.yaml  .sonar.settings  .sonarcloud.properties  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  MAINTENANCE.md  Makefile  README.md  check_import.py  ci_tests.mk  clients_README.md  cluster-info.txt  cluster.json  dev-requirements.txt  docker-compose-ci-override.yaml  docker-compose-dev.yaml  docker-compose.yaml  docs-requirements.txt  fmt-requirements.txt  gdc_fossa.yaml  generate_afm_client.sh  generate_metadata_client.sh  gooddata_example.yml  lint-requirements.txt  project_common.mk  pyproject.toml  (+17 more)
.aida/: .gitignore  change_domains.yaml  git_policy.yaml  preferences.yaml  rules_selection.yaml  validation_policy.yaml  validation_registry.yaml
.claude/: CLAUDE.md
.codex/: config.toml
.docker/: entrypoint.sh
.fossa/: Dockerfile  README.md  prepare_and_populate_pipenv.sh
.github/: CODEOWNERS
.openapi-generator/: README.md
.sync-notes/: P005-datetime-format.md
OSS LICENSES/: LICENSE (gooddata-afm-client).txt  LICENSE (gooddata-api-client).txt  LICENSE (gooddata-dbt).txt  LICENSE (gooddata-fdw).txt  LICENSE (gooddata-metadata-client).txt  LICENSE (gooddata-pandas).txt  LICENSE (gooddata-pipelines).txt  LICENSE (gooddata-scan-client).txt  LICENSE (gooddata-sdk).txt
dbt_gooddata/: args.py  dbt_gooddata.py  logger.py  sdk_wrapper.py
docs/: .htmltest.yml  Dockerfile  api_spec.toml  class_template.md  doc-requirements.txt  docs-requirements.txt  function_template.md  go.mod  go.sum  method_template.md  module_template.md  package-lock.json  package.json
gooddata-afm-client/: LICENSE.txt  README.md  setup.py  tox.ini
gooddata-api-client/: .gitignore  .openapi-generator-ignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
gooddata-dbt/: .env.custom.dev  .env.dev  Makefile  README.md  gooddata_example.yml  mypy.ini  requirements.txt  setup.py  test-requirements.txt  tox.ini  type-requirements.txt
gooddata-fdw/: .readthedocs.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  mypy.ini  (+8 more)
gooddata-pipelines/: .gitignore  LICENSE.txt  README.md  TODO.md  pyproject.toml  tox.ini
gooddata-pipelines/gooddata_pipelines/: __init__.py
gooddata-pipelines/gooddata_pipelines/api/: __init__.py  exceptions.py  gooddata_api.py  gooddata_api_wrapper.py  gooddata_sdk.py
gooddata-pipelines/gooddata_pipelines/backup_and_restore/: backup_input_processor.py  backup_manager.py  constants.py  restore_manager.py
gooddata-pipelines/gooddata_pipelines/backup_and_restore/models/: input_type.py  storage.py  workspace_response.py
gooddata-pipelines/gooddata_pipelines/backup_and_restore/storage/: base_storage.py  local_storage.py  s3_storage.py
gooddata-pipelines/gooddata_pipelines/ldm_extension/: input_processor.py  input_validator.py  ldm_extension_manager.py
gooddata-pipelines/gooddata_pipelines/ldm_extension/models/: aliases.py
gooddata-pipelines/gooddata_pipelines/logger/: __init__.py  logger.py
gooddata-pipelines/gooddata_pipelines/provisioning/: README.md  __init__.py  provisioning.py
gooddata-pipelines/gooddata_pipelines/provisioning/entities/user_data_filters/: user_data_filters.py
gooddata-pipelines/gooddata_pipelines/provisioning/entities/user_data_filters/models/: udf_models.py
gooddata-pipelines/gooddata_pipelines/provisioning/entities/users/: models.py  permissions.py  user_groups.py  users.py
gooddata-pipelines/gooddata_pipelines/provisioning/entities/users/models/: permissions.py  user_groups.py  users.py
gooddata-pipelines/gooddata_pipelines/provisioning/entities/workspaces/: models.py  workspace.py  workspace_data_filters.py  workspace_data_parser.py  workspace_data_validator.py
gooddata-pipelines/gooddata_pipelines/provisioning/generic/: provision.py
gooddata-pipelines/gooddata_pipelines/provisioning/utils/: context_objects.py  exceptions.py  utils.py
gooddata-pipelines/gooddata_pipelines/utils/: __init__.py  decorators.py
gooddata-pipelines/tests/: commons.py  conftest.py
gooddata-pipelines/tests/backup_and_restore/: test_backup.py  test_backup_input_processor.py
gooddata-pipelines/tests/data/: mock_responses.py  profiles.yaml
gooddata-pipelines/tests/data/backup/: test_conf.yaml
gooddata-pipelines/tests/data/backup/test_exports/services/wsid1/20230713-132759-1_3_1_dev5/gooddata_layouts/services/workspaces/wsid1/ldm/datasets/: test.yaml
gooddata-pipelines/tests/data/custom_fields/: response_get_all_dashboards.json  response_get_all_metrics.json
gooddata-pipelines/tests/data/provisioning/entities/permissions/: permissions_expected_full_load.json  permissions_expected_incremental_load.json  permissions_input_full_load.json  permissions_input_incremental_load.json
gooddata-pipelines/tests/data/provisioning/entities/users/: existing_upstream_users.json  profile_response_content.json  users_input_full_load.json  users_input_full_load_modifies_protected_user.json  users_input_incremental_load.json  users_input_incremental_load_deletes_protected_user.json
gooddata-pipelines/tests/data/restore/: test_conf.yaml
gooddata-pipelines/tests/data/restore/test_udf_root/user_data_filters/: filter1.yaml
gooddata-pipelines/tests/panther/: test_api_wrapper.py  test_sdk_wrapper.py
gooddata-pipelines/tests/provisioning/: test_provisioning.py
gooddata-pipelines/tests/provisioning/entities/users/: test_permissions.py  test_user_groups.py  test_users.py
gooddata-pipelines/tests/provisioning/entities/workspaces/: test_provisioning.py  test_workspace.py  test_workspace_data_filters.py  test_workspace_data_parser.py  test_workspace_data_validator.py
gooddata-pipelines/tests/test_ldm_extension/: test_input_processor.py  test_ldm_extension_manager.py
gooddata-pipelines/tests/test_ldm_extension/test_models/: test_analytical_object.py  test_custom_data_object.py
gooddata-pipelines/tests/utils/: test_decorators.py  test_rate_limiter.py
(+11061 files in other folders)
